use_cases/dynamic_cases/v1.0/language-anything/UpdatedCases.md
# Updated Use Cases

  - Changes made for Language Spec compliance

## Language-Anything Use Cases

### Bad Commands

| File                 | Changes | Reason | Source                                                   | Note |
| -------------------- | ------- | ------ | -------------------------------------------------------- | ---- |
| poetry\_ create.json |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |

### Good Commands

| File           | Changes | Reason | Source | Note |
| -------------- | ------- | ------ | ------ | ---- |
| Not Applicable |         |        |        |      |

### Bad Responses

| File                 | Changes | Reason | Source                                                   | Note |
| -------------------- | ------- | ------ | -------------------------------------------------------- | ---- |
| poetry\_results.json |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |

### Good Responses

| File           | Changes | Reason | Source | Note |
| -------------- | ------- | ------ | ------ | ---- |
| Not Applicable |         |        |        |      |
