use_cases/dynamic_cases/v1.1/language-anything/UpdatedCases.md
# Updated Use Cases

  - Changes made for Language Spec compliance

## Language-Anything Use Cases

### Bad Commands

| File                 | Changes | Reason | Source                                                   | Note |
| -------------------- | ------- | ------ | -------------------------------------------------------- | ---- |
| long\_name\_80.json  |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| long\_name\_244.json |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |

### Good Commands

| File                | Changes | Reason | Source                                                   | Note |
| ------------------- | ------- | ------ | -------------------------------------------------------- | ---- |
| create\_poetry.json |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |

### Bad Responses

| File           | Changes | Reason | Source                                                   | Note |
| -------------- | ------- | ------ | -------------------------------------------------------- | ---- |
| Not Applicable |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |

### Good Responses

| File                 | Changes | Reason | Source                                                   | Note |
| -------------------- | ------- | ------ | -------------------------------------------------------- | ---- |
| results\_poetry.json |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
